Fix for bug #13573 (wrong data inserted for too big decimals)